--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <div class="pimg1">
+    <!-- <img src="./pics/img3.jpg" alt=""> -->
     <div class="ptext">
       <span class="border">
         Parallax website
